update category attributes
