# docs/api/api.yaml
@@ -39,7 +39,7 @@ paths:
         - api_key: [ 'catalog-manage' ]
 
   /v1/categories/search:
-    get:
+    post:
       operationId: "search-categories"
       description: Search product categories
       requestBody:
@@ -92,35 +92,6 @@ paths:
       security:
         - api_key: [ 'catalog-read' ]
 
-    post:
-      operationId: "update-category"
-      description: Update a category
-      parameters:
-        - in: path
-          name: id
-          description: ID of the category
-          required: true
-          schema:
-            type: integer
-            format: int64
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UpdateCategoryRequest'
-      responses:
-        200:
-          description: Success
-        403:
-          description: The caller is not authorized to call this endpoint
-        404:
-          description: The product not found
-      tags:
-        - Category
-      security:
-        - api_key: [ 'catalog-read' ]
-
     delete:
       operationId: "delete-category"
       description: Delete an category
@@ -141,6 +112,46 @@ paths:
         - Category
       security:
         - api_key: [ 'catalog-manage' ]
+
+  /v1/categories/{id}/attributes/{name}:
+    post:
+      operationId: "update-category-attribute"
+      description: Update a category attribute
+      parameters:
+        - in: path
+          name: id
+          description: ID of the category
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - in: path
+          name: name
+          description: Name of the attribute to update
+          required: true
+          schema:
+            type: string
+            enum:
+              - title
+              - visible
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateCategoryAttributeRequest'
+      responses:
+        200:
+          description: Success
+        403:
+          description: The caller is not the owner of the category
+        404:
+          description: The product not found
+      tags:
+        - Product
+      security:
+        - api_key: [ 'catalog-manage' ]
+
 
   /v1/products:
     post:
@@ -663,6 +674,9 @@ components:
           description: ID of the category
         title:
           type: string
+        visible:
+          type: boolean
+          nullable: true
 
     GetCategoryResponse:
       type: object
@@ -696,15 +710,6 @@ components:
           items:
             $ref: "#/components/schemas/CategorySummary"
 
-    UpdateCategoryRequest:
-      type: object
-      properties:
-        title:
-          type: string
-          maxLength: 100
-      required:
-        - title
-
     AddCategoryRequest:
       type: object
       properties:
@@ -712,3 +717,11 @@ components:
           type: integer
           format: int64
           description: ID of the category
+
+    UpdateCategoryAttributeRequest:
+      type: object
+      properties:
+        value:
+          type: string
+          description: Value of the
+          nullable: true
