# src/main/kotlin/com/wutsi/platform/catalog/dto/UpdateCategoryAttributeRequest.kt
@@ -1,0 +1,7 @@
+package com.wutsi.platform.catalog.dto
+
+import kotlin.String
+
+public data class UpdateCategoryAttributeRequest(
+    public val `value`: String? = null
+)
