# src/main/kotlin/com/wutsi/platform/catalog/dto/UpdateCategoryRequest.kt
@@ -1,11 +1,0 @@
-package com.wutsi.platform.catalog.dto
-
-import javax.validation.constraints.NotBlank
-import javax.validation.constraints.Size
-import kotlin.String
-
-public data class UpdateCategoryRequest(
-    @get:NotBlank
-    @get:Size(max = 100)
-    public val title: String = ""
-)
